[package]
name = "rustfuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.6", features = ["derive"] }
colored = "2.0.0"